fixed default styles causing scrollbar to appear

--- a/style.css
+++ b/style.css
@@ -11,8 +11,10 @@
 }
 
 body {
-  background-image: var(--gradient);
+  padding: 0;
+  margin: 0;
   height: 100vh;
+  background-image: var(--gradient);
   font-family: "Poppins", sans-serif;
   background-size: 200%;
   animation: bg-animation 5s infinite alternate;
